--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,10 @@
 .list-group-item.list-group-item-primary {
     font-size: 18px;
 }
+
+.cart-section {
+    border: 1px solid #dac9c9;
+    padding: 20px 20px;
+    border-radius: 10px;
+    box-shadow: #8c7a7a26 0px 4px 17px 2px;
+}
